--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
   src:url(https://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTRa1RVmPjeKy21_GQJaLlJI.woff) format('woff');
   font-size: 20px;
   color: #eee;
-  background-color: #000;
+  background-color: #fff;
 }
 p {
   line-height: 1.5;
