--- a/css/galleries.css
+++ b/css/galleries.css
@@ -37,7 +37,7 @@
 #grid-changer svg { fill: #222; }
 
 .masonry-gallery.gallery { z-index: 0; width: 102.2%; margin: 0 0 1em 0; }
-.masonry-gallery .gallery-item { margin: 0 2% 1.3em 0; background-color: #ffffff; width: 31.3%; }
+.masonry-gallery .gallery-item { margin: 0 2% 1.3em 0; background-color: #7a8c7f; width: 31.3%; }
 .masonry-gallery .gallery-item.col-2 { width: 48%; }
 .masonry-gallery .gallery-item.col-3 { width: 31.3%; }
 .masonry-gallery .gallery-item.col-4 { width: 23%; }
