--- a/css/galleries.css
+++ b/css/galleries.css
@@ -36,8 +36,8 @@
 #grid-changer ul li a:hover { border-color: #EA8E00; color: #EA8E00; }
 #grid-changer svg { fill: #222; }
 
-.masonry-gallery.gallery { z-index: 0; width: 102.2%; margin: 0 0 1em 0; }
-.masonry-gallery .gallery-item { margin: 0 2% 1.3em 0; background-color: #7a8c7f; width: 31.3%; }
+.masonry-gallery.gallery { z-index: 0; width: 102.2%; margin: 0 0 1em 0; background: #7a8c7f; }
+.masonry-gallery .gallery-item { margin: 0 2% 1.3em 0; background: transparent; width: 31.3%; }
 .masonry-gallery .gallery-item.col-2 { width: 48%; }
 .masonry-gallery .gallery-item.col-3 { width: 31.3%; }
 .masonry-gallery .gallery-item.col-4 { width: 23%; }
